# autopilot

./: .dockerignore  .gitignore  404.html  README.md  index.html  mkdocs.yml
.github/workflows/: cli.yml
assets/: foto.png:Zone.Identifier
buildtools/: build.sh  deploy.sh  transfer.sh
buildtools/assets/: client.xml  docker-compose.yml
controltools/: CMakeLists.txt  package.xml
controltools/config/: gps_wpf_demo.mvc
controltools/launch/: control.launch.py  mapviz.launch.py
controltools/scripts/: gps_waypoint_logger.py  interactive_waypoint_follower.py  logged_waypoint_follower.py
details/: index.html
docs/: build.md  details.md  index.md  rules.md
navigation-service/assets/: entry_point.sh  navigation-service.dockerfile
navigation-service/plugins/linetracing/: example  linetracing.cpp
navigation-service/plugins/nav2_gradient_costmap_plugin/include/nav2_gradient_costmap_plugin/: gradient_layer.hpp
navigation-service/plugins/nav2_gradient_costmap_plugin/src/: gradient_layer.cpp
navigation-service/source/nav2_autopilot_bringup/: package.xml
navigation-service/source/nav2_autopilot_bringup/config/: nav2_no_map_params.yaml
navigation-service/source/nav2_autopilot_bringup/launch/: gps_waypoint_follower.launch.py
navigation-service/src/autopilot_bringup/: CMakeLists.txt  package.xml
navigation-service/src/autopilot_bringup/config/: ekf_autopilot_params.yaml  nav2_autopilot_params.yaml
navigation-service/src/autopilot_bringup/launch/: autopilot_bringup.launch.py  autopilot_bringup.py  autopilot_ekf.launch.py
navigation-service/src/autopilot_bringup/src/autopilot_bringup/config/: nav2_no_map_params.yaml
navigation-service/src/autopilot_control/: CMakeLists.txt
navigation-service/src/autopilot_control/scripts/: gps_waypoint_logger.py  logged_waypoint_follower.py
rules/: index.html
search/: search_index.json
vision-service/assets/: entry_point.sh  vision-service.dockerfile
vision-service/src/vision_mapping/: package.xml  setup.cfg  setup.py
vision-service/src/vision_mapping/config/: camera.yaml  config.yaml
vision-service/src/vision_mapping/launch/: grid_launch.py
vision-service/src/vision_mapping/src/: occupancyGrid.py  params_parser.py
