<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autopilot_control</name>
  <version>0.0.0</version>
  <description>Nav2 autopilot Control</description>
  <maintainer email="pedro.gonzalez@eia.edu.co">pepisg</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>navigation2</depend>
  <depend>robot_localization</depend>
  <depend>mapviz</depend>
  <depend>mapviz_plugins</depend>
  <depend>tile_map</depend>

    <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
